css for contacts

--- a/index.html
+++ b/index.html
@@ -176,25 +176,17 @@
 
       <!--block contacts-->
       <section class="contacts">
-         <img src="/IMG/photos/map.png" alt="карта" width="1440" height="644">
-         <div class="how-connect">
-            <div>
-               <h2>Мы ждем вас</h2>
+         <img src="/IMG/photos/map.jpg" alt="карта" width="1440" height="644">
+         <div class="connection">
+            <h2>Мы ждем вас</h2>
                <p>Приходите к нам:</p>
-               <p>Санкт-Петербург, ул. Большая Конюшенная, 19</p>
-            </div>
-            <div>
+               <p>Санкт-Петербург,<br> ул. Большая Конюшенная, 19</p>
                <p>Режим работы:</p>
                <p>Пн-Вск, с 9-00 до 20-00</p>
-            </div>
-            <div>
                <p>Позвоните нам:</p>
                <a href="tel:+ 7(812)983-47-19">+ 7 (812) 983-47-19</a>
-            </div>
-            <div>
                <p>Напишите нам:</p>
                <a href="mailto:info@botanika.ru">info@botanika.ru</a>
-            </div>
          </div>
       </section>
    </main>
