header - well done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
    <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Магазин цветов</title>
    <link rel="preload" href="/fonts/Montserrat-Regular.woff" as="font">
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -12,7 +13,7 @@
 <body>
    <header>
       <nav class="header-container">
-         <a class="header-logo"><img src="/IMG/icons/logo.svg" alt="логтип Botanica" width="100" height="32"></a>
+         <a class="header-logo"><img src="/IMG/icons/logo.svg" alt="логотип Botanica" width="100" height="32"></a>
          <ul class="menu header-menu">
             <li><a href="#">каталог</a></li>
             <li><a href="#">доставка и оплата</a></li>
@@ -24,6 +25,7 @@
       </nav>
    </header>
 
+      
    <!--block main-->
    <main id="home">
       <section class="about-main">
